--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,7 @@ task integrationTest(type: Test) {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile 'org.assertj:assertj-core:3.11.1'
+    testCompile group: 'org.mockito', name: 'mockito-core', version: '3.1.0'
 }
 
 
